--- a/css/style.css
+++ b/css/style.css
@@ -2526,14 +2526,14 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 
 #port-card-v1{
-  box-shadow: 2px 4px 10px rgba(140, 140, 140, 0.48);
+  box-shadow: 2px 4px 12px 2px rgba(140, 140, 140, 0.48);
   padding: 10px;
 }
 
 #port-card-v2{
   box-shadow: 2px 3px 3px rgba(140, 140, 140, 0.48);
   padding: 10px;
-  border: 1px grey solid;
+  border: 1px rgb(204, 204, 204) solid;
 }
 
 .product-checkout-details .product-card > a {
