--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*=== MEDIA QUERY ===*/
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,500,600);
-@import url(http://fonts.googleapis.com/css?family=Volkhov:400italic);
+@import url(https://fonts.googleapis.com/css?family=Volkhov:400italic);
 body {
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
@@ -711,7 +711,7 @@ font header .navbar-default .navbar-nav li a:hover {
 .navigation .navbar .dropdown-menu {
   border-radius: 0;
   border: none;
-  drop-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.08);
 }
 
 .navigation .navbar .dropdown-menu a {
